# XunFeiMassImage

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.yaml.example
.github/workflows/: release.yml
src/: api.rs  cli.rs  config.rs  gui.rs  main.rs  mcp.rs  watermark.rs
