[package]
name = "xunfei-image-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.28", features = ["default"] }
hmac = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
urlencoding = "2.1"
rand = "0.8"
rfd = "0.14"
axum = "0.7"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
